--- a/style.css
+++ b/style.css
@@ -1,40 +1,40 @@
 body {
-    font-family: "Montserrat", "Tahoma", sans-serif;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 1.5;
-    color: #000000;
-    min-width: 1150px;
+  font-family: "Montserrat", "Tahoma", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.5;
+  color: #000000;
+  min-width: 1150px;
 }
 
 .page-main {
-    background-color: #fffdf8;
-    padding: 60px 0;
+  background-color: #fffdf8;
+  padding: 60px 0;
 }
 
 .wrapper {
-    width: 1110px;
-    margin: 0 auto;
-    padding: 0 20px;
+  width: 1110px;
+  margin: 0 auto;
+  padding: 0 20px;
 }
 
 .wysiwyg-wrapper h1 {
-    font-family: "Montserrat", "Arial", sans-serif;
-    font-size: 48px;
-    line-height: 59px;
-    margin-bottom: 24px;
+  font-family: "Montserrat", "Arial", sans-serif;
+  font-size: 48px;
+  line-height: 59px;
+  margin-bottom: 24px;
 }
 
 .wysiwyg-wrapper h2 {
-    color: #9f7303;
-    font-size: 40px;
-    font-weight: 500;
+  color: #9f7303;
+  font-size: 40px;
+  font-weight: 500;
 }
 
 .wysiwyg-wrapper h3 {
-    color: #9f7303;
-    font-size: 32px;
-    font-weight: 500;
+  color: #9f7303;
+  font-size: 32px;
+  font-weight: 500;
 }
 
 .wysiwyg-wrapper ul,
@@ -62,65 +62,139 @@ body {
 }
 
 .wysiwyg-wrapper blockquote {
-    font-size: 24px;
-    font-style: italic;
-    font-weight: 300;
-    color: #9f7303;
-    padding: 40px 100px;
-    border-top: 1px solid #f5d581;
-    border-bottom: 1px solid #f5d581;
-    text-align: center;
-    width: 70%;
-    margin: 60px auto 60px auto;
-  }
+  font-size: 24px;
+  font-style: italic;
+  font-weight: 300;
+  color: #9f7303;
+  padding: 40px 100px;
+  border-top: 1px solid #f5d581;
+  border-bottom: 1px solid #f5d581;
+  text-align: center;
+  width: 70%;
+  margin: 60px auto 60px auto;
+}
 
 .wp-block-separator {
-    width: 100%;
-    height: 400px;
-    background-image: url("img/separator-bread.svg");
-    background-size: 1110px 400px;
-    background-repeat: no-repeat;
-    background-position: center;
-    margin: 165px 0;
-  }
+  width: 100%;
+  height: 400px;
+  background-image: url("img/separator-bread.svg");
+  background-size: 1110px 400px;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin: 165px 0;
+}
 
-  .review-item {
-    display: grid;
-    grid-template-columns: 50px 1fr;
-    grid-template-rows: 27px 1fr;
-    column-gap: 22px;
-    margin-bottom: 30px;
-  }
+.order {
+  background-color: #f4efe2;
+  padding: 70px 0;
+}
+
+.order-form {
+  padding-bottom: 50px;
+  border-bottom: 1px solid #f5d581;
+}
+
+.order-title {
+  color: #9f7303;
+  font-size: 32px;
+  font-weight: 500;
+  margin-bottom: 30px;
+}
+
+.wpcf7-textarea {
+  font-size: 18px;
+  line-height: 1.5;
+  font-family: "Montserrat", "Arial", sans-serif;
+  width: 100%;
+  padding: 17px;
+  box-sizing: border-box;
+  border: 1px solid #f5d581;
+  border-radius: 8px;
+  margin-bottom: 10px;
+}
+
+.wpcf7-text {
+  font-size: 18px;
+  line-height: 1.5;
+  font-family: "Montserrat", "Arial", sans-serif;
+  padding: 17px;
+  box-sizing: border-box;
+  border: 1px solid #f5d581;
+  border-radius: 8px;
+  margin-bottom: 10px;
+}
+
+.order-form .wpcf7-text {
+  width: 50%;
+}
+
+.wpcf7-submit {
+  font-family: "Montserrat", "Arial", sans-serif;
+  font-size: 18px;
+  line-height: 1.5;
+  background-color: #9f7303;
+  color: #ffffff;
+  width: 285px;
+  padding: 20px 40px;
+  box-sizing: border-box;
+  border-radius: 8px;
+  border: none;
+  cursor: pointer;
+}
+
+.order-text {
+  font-size: 12px;
+  line-height: 1.5;
+  font-weight: 400;
+  color: #494844;
+  width: 185px;
   
-  .review-image-wrapper {
-    width: 50px;
-    height: 50px;
-    grid-column: 1 / 2;
-    grid-row: 1 / 3;
-  
-    background-color: #f5d581;
-    border-radius: 50%;
-  }
-  
-  .review-item img {
-    border-radius: 50%;
-    object-fit: cover;
-  
-    text-indent: -100vw;
-  }
-  
-  .review-name {
-    font-size: 14px;
-    line-height: 1.5;
-    font-weight: 500;
-    margin: 0;
-  }
-  
-  .review-text {
-    font-size: 18px;
-    line-height: 1.5;
-    font-weight: 400;
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
-    margin: 0;
-  }
+  margin-left: 20px;
+}
+
+.order-submit-area {
+  display: flex;
+  align-items: center;
+}
+
+
+.review-item {
+  display: grid;
+  grid-template-columns: 50px 1fr;
+  grid-template-rows: 27px 1fr;
+  column-gap: 22px;
+  margin-bottom: 30px;
+}
+
+.review-image-wrapper {
+  width: 50px;
+  height: 50px;
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+
+  background-color: #f5d581;
+  border-radius: 50%;
+}
+
+.review-item img {
+  border-radius: 50%;
+  object-fit: cover;
+
+  text-indent: -100vw;
+}
+
+.review-name {
+  font-size: 14px;
+  line-height: 1.5;
+  font-weight: 500;
+  margin: 0;
+}
+
+.review-text {
+  font-size: 18px;
+  line-height: 1.5;
+  font-weight: 400;
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  margin: 0;
+}
