--- a/style.css
+++ b/style.css
@@ -18,6 +18,96 @@ body {
   padding: 0 20px;
 }
 
+.main-header-wrapper {
+  display: flex;
+}
+
+.main-nav {
+  margin-left: auto;
+  max-width: 700px;
+}
+
+.menu-primary-container .menu-item {
+  list-style-type: none;
+}
+
+.menu-primary-container .menu-item a {
+  font-size: 18px;
+  color: #000000;
+  padding: 10px 25px;
+  text-decoration: none;
+}
+
+.menu-primary-container .menu-item a:hover {
+  color: #9f7303;
+}
+
+.menu-primary-container .menu {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+/* Отступы для пунктов меню первого уровня */
+
+.menu-primary-container .menu > .menu-item {
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+
+.menu-primary-container .sub-menu {
+  position: absolute;
+  min-width: 200px;
+  top: 30px;
+  left: 20px;
+  display: none;
+  padding: 15px;
+  box-sizing: border-box;
+  background: #ffffff;
+  box-shadow: 0 2px 4px rgba(97, 97, 97, 0.18), 0 4px 8px rgba(97, 97, 97, 0.18);
+  z-index: 2;
+}
+
+.menu-primary-container .menu-item-has-children {
+  position: relative;
+}
+
+.menu-primary-container .menu-item-has-children > a {
+  padding-right: 30px;
+}
+
+.menu-primary-container .menu-item-has-children::before {
+  content: "";
+  background-image: url("img/icon-sub-menu.svg");
+  width: 13px;
+  height: 9px;
+  background-size: cover;
+  position: absolute;
+  right: 5px;
+  top: 12px;
+  z-index: -1;
+}
+
+.menu-primary-container .sub-menu .menu-item {
+  margin-bottom: 10px;
+}
+
+.menu-primary-container .sub-menu .menu-item:last-child {
+  margin-bottom: 0;
+}
+
+.menu-primary-container .menu-item-has-children:hover .sub-menu {
+  display: block;
+}
+
+.menu-primary-container .menu-item-styled {
+  border: 1px solid #9f7303;
+  border-radius: 8px;
+}
+
+.menu-primary-container .current-menu-item a {
+  color: #684C05;
+}
+
 .wysiwyg-wrapper h1 {
   font-family: "Montserrat", "Arial", sans-serif;
   font-size: 48px;
@@ -72,16 +162,6 @@ body {
   text-align: center;
   width: 70%;
   margin: 60px auto 60px auto;
-}
-
-.wp-block-separator {
-  width: 100%;
-  height: 400px;
-  background-image: url("img/separator-bread.svg");
-  background-size: 1110px 400px;
-  background-repeat: no-repeat;
-  background-position: center;
-  margin: 165px 0;
 }
 
 .order {
@@ -157,6 +237,9 @@ body {
   align-items: center;
 }
 
+.reviews {
+  background-color: #f4efe2;
+}
 
 .review-item {
   display: grid;
